--- a/Institute/MainWindow.xaml
+++ b/Institute/MainWindow.xaml
@@ -39,7 +39,7 @@
             </Button>
         </Grid>
         <Grid Margin="196,0,0,0">
-            <TabControl  x:Name="mainSubsystemTab">
+            <TabControl d:IsHidden="True" x:Name="mainSubsystemTab" SelectionChanged="mainSubsystemTab_SelectionChanged">
                 <TabItem Header="Добавление">
                     <Grid>
                         <TabControl>
@@ -1305,9 +1305,14 @@
                     </Grid>
                 </TabItem>
             </TabControl>
-            <TabControl d:IsHidden="True" x:Name="repotSubsystemTab">
+            <TabControl x:Name="repotSubsystemTab">
                 <TabItem Header="Отдел">
-                    <Grid Background="#FFE5E5E5">
+                    <Grid x:Name="departmentGrid" Background="#FFE5E5E5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="759*"/>
+                            <ColumnDefinition Width="145*"/>
+                            <ColumnDefinition Width="219*"/>
+                        </Grid.ColumnDefinitions>
                         <TextBox x:Name="tbSearchDepartmentName" HorizontalAlignment="Left" Margin="10,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="186" Height="30" FontSize="20" BorderBrush="Black">
                             <TextBox.Resources>
                                 <Style TargetType="{x:Type Border}">
@@ -1316,41 +1321,39 @@
                             </TextBox.Resources>
                         </TextBox>
                         <Label Content="Наименование" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <TextBox x:Name="tbSearchDepartmentStaff" HorizontalAlignment="Left" Margin="210,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="186" Height="30" FontSize="20" BorderBrush="Black">
-                            <TextBox.Resources>
-                                <Style TargetType="{x:Type Border}">
-                                    <Setter Property="CornerRadius" Value="5"/>
-                                </Style>
-                            </TextBox.Resources>
-                        </TextBox>
-                        <Label Content="Штат" HorizontalAlignment="Left" Margin="210,0,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <Button x:Name="butSearchDepartment" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                        <Button x:Name="butSearchDepartment" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butSearchDepartmentClick" Grid.Column="2">
                             <Button.Resources>
                                 <Style TargetType="Border">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <Button x:Name="butClearSearchDepartment" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                        <Button x:Name="butClearSearchDepartment" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butClearSearchDepartmentClick" Grid.Column="1" Grid.ColumnSpan="2">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <DataGrid x:Name="dgSearchDepartment" Margin="0,143,0,0"/>
+                        <DataGrid x:Name="dgSearchDepartment" Margin="0,143,0,0" Grid.ColumnSpan="3"/>
+                        <Grid Visibility="Hidden" x:Name="departmentSearchResalt" >
+                            <Label Content="Наименование:" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <Label Content="Штат:" HorizontalAlignment="Left" Margin="10,211,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <Label x:Name="departmentSearchResaltName" Content="Учебный отдел" HorizontalAlignment="Left" Margin="175,169,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <Label x:Name="departmentSearchResaltStuff" Content="12" HorizontalAlignment="Left" Margin="175,211,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        </Grid>
                     </Grid>
                 </TabItem>
                 <TabItem Header="Факультет">
-                    <Grid Background="#FFE5E5E5">
-                        <Button x:Name="butSearchFaculty" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                    <Grid x:Name="facultyGrid" Background="#FFE5E5E5">
+                        <Button x:Name="butSearchFaculty" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butSearchFacultyClick">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <Button x:Name="butClearSearchFaculty" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                        <Button x:Name="butClearSearchFaculty" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butClearSearchFacultyClick">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
@@ -1373,26 +1376,28 @@
                             </TextBox.Resources>
                         </TextBox>
                         <Label Content="Наименование отдела" HorizontalAlignment="Left" Margin="210,0,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <DataGrid x:Name="dgSearchFaculty" Margin="0,143,0,0"/>
+                        <DataGrid x:Name="dgSearchFaculty" ColumnWidth="*" Margin="0,143,0,0">
+                            
+                        </DataGrid>
                     </Grid>
                 </TabItem>
                 <TabItem Header="Кафедра">
-                    <Grid Background="#FFE5E5E5">
-                        <Button x:Name="butSearchChair" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                    <Grid x:Name="chairGrid" Background="#FFE5E5E5">
+                        <Button x:Name="butSearchChair" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butSearchChairlick">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <Button x:Name="butClearSearchChair" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                        <Button x:Name="butClearSearchChair" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butClearSearchChairClick">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <DataGrid x:Name="dgSearchChair" Margin="0,143,0,0"/>
+                        
                         <TextBox x:Name="tbSearchChairName" HorizontalAlignment="Left" Margin="10,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="186" Height="30" FontSize="20" BorderBrush="Black">
                             <TextBox.Resources>
                                 <Style TargetType="{x:Type Border}">
@@ -1409,25 +1414,29 @@
                             </TextBox.Resources>
                         </TextBox>
                         <Label Content="Наименование факультета" HorizontalAlignment="Left" Margin="210,0,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <DataGrid x:Name="dgSearchChair" ColumnWidth="*" Margin="0,143,0,0">
+
+                        </DataGrid>
                     </Grid>
                 </TabItem>
                 <TabItem x:Name="dgSearchSpeciality" Header="Направление">
-                    <Grid Background="#FFE5E5E5">
-                        <Button x:Name="butSearchSpeciality" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                    <Grid x:Name="specialityGrid" Background="#FFE5E5E5">
+                        <Button x:Name="butSearchSpeciality" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butSearchSpecialityClick">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <Button x:Name="butClearSearchSpeciality" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                        <Button x:Name="butClearSearchSpeciality" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butClearSearchSpecialityClick">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <DataGrid Margin="0,143,0,0"/>
+                        <DataGrid x:Name="dgSearchSpecialityGrid" ColumnWidth="*" Margin="0,143,0,0">
+                        </DataGrid>
                         <TextBox x:Name="tbSearchSpecialityName" HorizontalAlignment="Left" Margin="10,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="186" Height="30" FontSize="20" BorderBrush="Black">
                             <TextBox.Resources>
                                 <Style TargetType="{x:Type Border}">
@@ -1447,22 +1456,22 @@
                     </Grid>
                 </TabItem>
                 <TabItem x:Name="dgSearchDiscipline" Header="Дисциплина">
-                    <Grid Background="#FFE5E5E5">
-                        <Button x:Name="butSearchDiscipline" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                    <Grid x:Name="disciplineGrid" Background="#FFE5E5E5">
+                        <Button x:Name="butSearchDiscipline" Content="Поиск" Margin="0,91,10,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butSearchDisciplineClick">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <Button x:Name="butClearSearchDiscipline" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top">
+                        <Button x:Name="butClearSearchDiscipline" Content="Очистить" Margin="0,91,130,0" FontSize="20" HorizontalAlignment="Right" Width="101" VerticalAlignment="Top" Click="butClearSearchDisciplineClick">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                        <DataGrid Margin="0,143,0,0"/>
+                        <DataGrid x:Name="dbSearchDiscipline" Margin="0,143,0,0"/>
                         <TextBox x:Name="tbSearchDisciplineName" HorizontalAlignment="Left" Margin="10,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="186" Height="30" FontSize="20" BorderBrush="Black">
                             <TextBox.Resources>
                                 <Style TargetType="{x:Type Border}">
